Changed main container to fluid. Corrected text alignment in footer. Added brickwall backgroundimage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,5 @@
-.header-navbar{
-    background-color: transparent;
-    padding: 0px;
-}
-
-
-.main-container{
-    /* padding: 0px;  */
-    max-width: 988px;
-    position: relative;
-    top: -90px;
+.background-image{
+    background-image: url(../images/brickwall.png);
 }
 
 
@@ -21,16 +12,38 @@
 
 .content-header{
     border-bottom: #ddd 2px solid;
-    /* margin-bottom: 20px; */
-    padding: 30px 0px 20px 0px;
+    padding: 30px 0px 15px 0px;
     margin-bottom: 20px;
 }
 
 
+.header-navbar{
+    background-color: transparent;
+    padding: 0px;
+}
+
+
+.main-container{
+    max-width: 988px;
+    position: relative;
+    top: -90px;
+}
+
+
 body{
-    background-image: url(../images/white-waves.png);
+    background-color: #777;
     color: #777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 2em;
+}
+
+
+footer{
+    background-color: #777;
+    border-top: #4aaaa5 7px solid;
+    color: #ccc;
+    padding-top: 30px;
+    text-align: center;
 }
 
 
@@ -57,25 +70,10 @@ h1, h2{
 }
 
 
-footer{
-    /* display: inline-block; */
-    background-color: #777;
-    border-top: #4aaaa5 7px solid;
-    color: #ccc;
-    height: 60px;
-    text-align: center;
-    position: relative;
-}
-
-footer span{
-    position: absolute;
-    bottom: 0px;
-    /* text-align: center; */
-    /* text-align: center; */
-}
-
 img{
-    padding: 0px 10px 10px 0px;
+    border: #ddd 1px solid;
+    margin: 0px 10px 10px 0px;
+    box-shadow:5px 5px 8px #ddd;
 }
 
 
